trunk/Archive2/7c/c86aab5d9a6b58/output
main.cpp:14:12: error: use of undeclared identifier 'y'
    (void) y, (void) z;
           ^
main.cpp:14:22: error: use of undeclared identifier 'z'
    (void) y, (void) z;
                     ^
2 errors generated.
